Fixed Table Layout Issues

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -322,12 +322,6 @@ main {
     box-sizing: border-box;
     border: 1px solid #ccc;
   }
-
-  /* Markdown tables will be displayed so that 
-   * each column has the same width. Faster and cleaner. */
-  table {
-    table-layout: fixed;
-  }
 }
 
 footer {
